fix: properly align privay-icons

--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -734,6 +734,7 @@ label[for] {
 	.fa {
 		font-size: 0.75em;
 		margin-right: 0.5em;
+		align-self: center;
 	}
 
 	.large & {
